Did a bunch of work to make the Shopping Cart just about fully functional. The only things left to do are to implement the Cancel Order and Checkout buttons.
On the Item Selection Side of things, I've devised a working solution for selecting size using Side Selector, and Drinks can follow the example of sides. One thing I haven't done yet is actually test out ItemCustomizer, so that's what I'll do next, along with getting the Side and Entree selector fully implemented.

One other thing I thought would be cool is if I made a manual text input button at the top that could allow a user to manually navigate to any page or manually enter in a new item. Just a thought.

--- a/PointOfSale/ItemSelection/EntreeSelector.xaml
+++ b/PointOfSale/ItemSelection/EntreeSelector.xaml
@@ -18,6 +18,20 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
+        <Grid.Resources>
+            <Style TargetType="Button">
+                <Setter Property="ContentTemplate">
+                    <Setter.Value>
+                        <DataTemplate>
+                            <TextBlock Text="{TemplateBinding Content}" 
+                                       TextWrapping="Wrap"
+                                       TextAlignment="Center"/>
+                        </DataTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+        </Grid.Resources>
+
         <Button Grid.Column="0" Grid.Row="0" FontSize="20">
             Briarheart Burger
         </Button>
