--- a/PointOfSale/ItemSelection/SideSelector.xaml
+++ b/PointOfSale/ItemSelection/SideSelector.xaml
@@ -6,8 +6,12 @@
              xmlns:local="clr-namespace:PointOfSale.ItemSelection"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid Name="sideSelectionGrid">
         <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
@@ -17,22 +21,28 @@
             <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
 
-        <Button Grid.Column="0" Grid.Row="0" FontSize="20">
+        <Button Grid.Column="0" Grid.Row="0" FontSize="20" Click="AddVokunSalad"
+                Name="vsButton" Grid.ColumnSpan="3">
             Vokun Salad
         </Button>
-        <Button Grid.Column="1" Grid.Row="0" FontSize="20">
+        <Button Grid.Column="3" Grid.Row="0" FontSize="20" Click="AddFriedMiraak"
+                Name="fmButton" Grid.ColumnSpan="3">
             Fried Miraak
         </Button>
-        <Button Grid.Column="0" Grid.Row="1" FontSize="20">
+        <Button Grid.Column="0" Grid.Row="1" FontSize="20" Click="AddMadOtarGrits"
+                Name="mogButton" Grid.ColumnSpan="3">
             Mad Otar Grits
         </Button>
-        <Button Grid.Column="1" Grid.Row="1" FontSize="20">
+        <Button Grid.Column="3" Grid.Row="1" FontSize="20" 
+                Click="AddDragonbornWaffleFries" Name="dwfButton"
+                Grid.ColumnSpan="3">
             Dragonborn Waffle Fries
         </Button>
 
         <Button Grid.Column="0" Grid.Row="2" FontSize="20" Name="backButton"
-                Grid.ColumnSpan="2" Click="GoBack">
+                Grid.ColumnSpan="6" Click="GoBack">
             &lt;&lt; Back &gt;&gt;
         </Button>
+
     </Grid>
 </UserControl>
