--- a/PointOfSale/MainWindow.xaml
+++ b/PointOfSale/MainWindow.xaml
@@ -12,7 +12,23 @@
             <ColumnDefinition Width="240"/>
         </Grid.ColumnDefinitions>
         <Border BorderThickness="1" BorderBrush="SlateGray">
-            <local1:ItemSelector/>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <local1:ItemSelector Grid.Row="1"/>
+                <Grid Grid.Row="0" Grid.RowSpan="1">
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="75"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBox Grid.Column="0" IsEnabled="False"/>
+                    <Button Grid.Column="1" IsEnabled="False">Navigate</Button>
+                    
+                </Grid>
+            </Grid>
         </Border>
         <Border Grid.Column="1" BorderThickness="1" BorderBrush="SlateGray">
             <local:Cart/>
