I think I've pretty much got ItemCustomizer working. Getting generic objects to function in the way that I wanted to required use of the dynamic keyword as well as Activator.CreateInstance() in order to create an instance of an object whose type I won't know until runtime, but it all worked out. Next I need to figure out how INotifyPropertyChange works.

--- a/PointOfSale/ShopingCart/Cart.xaml
+++ b/PointOfSale/ShopingCart/Cart.xaml
@@ -40,7 +40,8 @@
         </Button>
         <DockPanel Grid.Row="2" Grid.ColumnSpan="3">
             <Button DockPanel.Dock="Left" Width="120" Height="30"
-                    Name="cancelOrderButton">
+                    Name="cancelOrderButton"
+                    Click="RemoveOrder">
                 Cancel Order</Button>
             <Button DockPanel.Dock="Right" Width="120" Height="30"
                     Name="checkoutButton">
