--- a/PointOfSale/ItemSelection/DrinkSelector.xaml
+++ b/PointOfSale/ItemSelection/DrinkSelector.xaml
@@ -6,8 +6,23 @@
              xmlns:local="clr-namespace:PointOfSale.ItemSelection"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="600">
-    <Grid>
+    <Grid Name="drinkGrid">
+        <Grid.Resources>
+            <Style TargetType="Button">
+                <Setter Property="Grid.ColumnSpan" Value="3"/>
+                <Setter Property="FontSize" Value="25"/>
+            </Style>
+            <Style TargetType="local:ItemButton">
+                <Setter Property="Grid.ColumnSpan" Value="3"/>
+                <Setter Property="FontSize" Value="25"/>
+            </Style>
+        </Grid.Resources>
+        
         <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
@@ -16,23 +31,28 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Button Grid.Column="0" Grid.Row="0" FontSize="25">
+        <local:ItemButton Grid.Column="0" Grid.Row="0" x:Name="ssButton"
+                Click="GetSelectedItem">
             Sailor's Soda
-        </Button>
-        <Button Grid.Column="1" Grid.Row="0" FontSize="25">
+        </local:ItemButton>
+        <local:ItemButton Grid.Column="3" Grid.Row="0" x:Name="mmButton"
+                Click="GetSelectedItem">
             Markarth Milk
-        </Button>
-        <Button Grid.Column="0" Grid.Row="1" FontSize="25">
+        </local:ItemButton>
+        <local:ItemButton Grid.Column="0" Grid.Row="1" x:Name="aajButton"
+                Click="GetSelectedItem">
             Aretino Apple Juice
-        </Button>
-        <Button Grid.Column="1" Grid.Row="1" FontSize="25">
+        </local:ItemButton>
+        <local:ItemButton Grid.Column="3" Grid.Row="1" x:Name="chcButton"
+                Click="GetSelectedItem">
             Candlehearth Coffee
-        </Button>
-        <Button Grid.Column="0" Grid.Row="2" FontSize="25">
+        </local:ItemButton>
+        <local:ItemButton Grid.Column="0" Grid.Row="2" x:Name="wwButton"
+                Click="GetSelectedItem">
             Warrior Water
-        </Button>
+        </local:ItemButton>
         
-        <Button Grid.Column="1" Grid.Row="2" FontSize="25" Name="backButton"
+        <Button Grid.Column="3" Grid.Row="2" Name="backButton"
                  Click="GoBack">
             &lt;&lt; Back &gt;&gt;
         </Button>
