--- a/PointOfSale/ItemSelection/ItemCustomizer.xaml
+++ b/PointOfSale/ItemSelection/ItemCustomizer.xaml
@@ -6,13 +6,21 @@
              xmlns:local="clr-namespace:PointOfSale.ItemSelection"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="600">
-    <DockPanel Name="customDockPanel">
-        <TextBlock FontSize="19" DockPanel.Dock="Top" TextWrapping="Wrap">
-            Select Items below to select optional customizations to the item. 
-            If a line is highlighted, that means it's selected.
-        </TextBlock>
-        <Button DockPanel.Dock="Bottom" Height="30">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="30"/>
+        </Grid.RowDefinitions>
+        
+        <DockPanel Grid.Row="0" Name="propertyPanel"/>
+        
+        <Button Grid.Row="1">
+            Add Item
+        </Button>
+        <Button Grid.Row="2">
             &lt;&lt; Back &gt;&gt;
         </Button>
-    </DockPanel>
+        
+    </Grid>
 </UserControl>
