--- a/PointOfSale/MainWindow.xaml
+++ b/PointOfSale/MainWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PointOfSale" xmlns:local1="clr-namespace:PointOfSale.ItemSelection"
+        xmlns:local="clr-namespace:PointOfSale" 
+        xmlns:local1="clr-namespace:PointOfSale.ItemSelection"
         mc:Ignorable="d"
         Title="Bleakwind Buffet" Height="450" Width="800">
     <Grid>
