Got everything but Combos done. Nice!

--- a/PointOfSale/MainWindow.xaml
+++ b/PointOfSale/MainWindow.xaml
@@ -31,8 +31,8 @@
                 </Grid>
             </Grid>
         </Border>
-        <Border Grid.Column="1" BorderThickness="1" BorderBrush="SlateGray">
-            <local:Cart/>
+        <Border Grid.Column="1" BorderThickness="1" BorderBrush="SlateGray"
+                Name="CartBorder">
         </Border>
     </Grid>
 </Window>
