--- a/Website/wwwroot/css/site.css
+++ b/Website/wwwroot/css/site.css
@@ -1,6 +1,46 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+item-list {
+    list-style-type: none;
+    border-bottom: 1px solid lightgray;
+    margin: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    min-height: 50px;
+    padding: 0;
+    margin: 0;
+    border-top: 1px solid gray;
+    list-style-type: none;
+}
+
+form#item-menu {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: auto auto;
+}
+
+#search {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    text-align: center;
+}
+
+#filters {
+    display: flex;
+    flex-direction: column;
+}
+
+    #filters input[type=number] {
+        width: 3rem;
+    }
+
+    #filters h4 {
+        margin-bottom: 0.2rem;
+    }
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
