--- a/Website/wwwroot/css/site.css
+++ b/Website/wwwroot/css/site.css
@@ -109,3 +109,17 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/* Added Stuff?
+    --------------------------------------------------- */
+
+.flex-columns {
+    display: flex;
+    flex-direction: row;
+}
+
+@media (max-width: 490px) {
+    .flex-columns {
+        flex-direction: column;
+    }
+}
